--- a/src/main/resources/view/ClientForm.fxml
+++ b/src/main/resources/view/ClientForm.fxml
@@ -2,10 +2,12 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="827.0" prefWidth="465.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.ClientFormController">
@@ -17,7 +19,7 @@
       </ImageView>
       <TextField layoutX="14.0" layoutY="750.0" prefHeight="53.0" prefWidth="281.0" promptText="Type Your Message Here" />
       <Label contentDisplay="CENTER" layoutX="-2.0" layoutY="-3.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="75.0" prefWidth="466.0" style="-fx-background-color: white;" />
-      <Label layoutX="103.0" layoutY="15.0" prefHeight="46.0" prefWidth="139.0" text="Cat">
+      <Label layoutX="85.0" layoutY="15.0" prefHeight="46.0" prefWidth="190.0" text="Cat">
          <font>
             <Font name="System Bold" size="30.0" />
          </font>
@@ -36,7 +38,7 @@
             <ImageView fitHeight="37.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../assets/attachment.png" />
-               </image>
+               </image> 
             </ImageView>
          </graphic>
       </Button>
@@ -49,7 +51,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <ImageView fitHeight="46.0" fitWidth="46.0" layoutX="39.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="46.0" fitWidth="46.0" layoutX="23.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../assets/Client_Cat.png" />
          </image>
@@ -72,5 +74,10 @@
             </ImageView>
          </graphic>
       </Button>
+      <ScrollPane layoutY="72.0" opacity="0.0" prefHeight="672.0" prefWidth="466.0">
+         <content>
+            <VBox prefHeight="676.0" prefWidth="466.0" />
+         </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
