--- a/src/main/resources/view/ServerForm.fxml
+++ b/src/main/resources/view/ServerForm.fxml
@@ -1,14 +1,84 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="lk.ijse.Controller.ServerFormController"
-            prefHeight="400.0" prefWidth="600.0">
+<AnchorPane prefHeight="827.0" prefWidth="465.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.ServerFormController">
+    <children>
+        <ImageView fitHeight="827.0" fitWidth="504.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@../assets/a3f1a94e040b565cec3d399406956f5f.jpg" />
+            </image>
+        </ImageView>
+        <TextField layoutX="14.0" layoutY="750.0" prefHeight="53.0" prefWidth="281.0" promptText="Type Your Message Here" />
+        <Label contentDisplay="CENTER" layoutX="-2.0" layoutY="-3.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="75.0" prefWidth="466.0" style="-fx-background-color: white;" />
+        <Label layoutX="85.0" layoutY="15.0" prefHeight="46.0" prefWidth="190.0" text="Server">
+            <font>
+                <Font name="System Bold" size="30.0" />
+            </font>
+        </Label>
+        <Button layoutX="402.0" layoutY="754.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="46.0">
+            <graphic>
+                <ImageView fitHeight="37.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@../assets/send.png" />
+                    </image>
+                </ImageView>
+            </graphic>
+        </Button>
+        <Button layoutX="356.0" layoutY="754.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="46.0">
+            <graphic>
+                <ImageView fitHeight="37.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@../assets/attachment.png" />
+                    </image>
+                </ImageView>
+            </graphic>
+        </Button>
+        <Button layoutX="310.0" layoutY="754.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="46.0">
+            <graphic>
+                <ImageView fitHeight="36.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@../assets/5376396_avatar_emoji_emoticon_expression_icon.png" />
+                    </image>
+                </ImageView>
+            </graphic>
+        </Button>
+        <ImageView fitHeight="46.0" fitWidth="46.0" layoutX="23.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@../assets/Client_Cat.png" />
+            </image>
+        </ImageView>
+        <Button layoutX="325.0" layoutY="11.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="50.0">
+            <graphic>
+                <ImageView fitHeight="46.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@../assets/phone%20call.png" />
+                    </image>
+                </ImageView>
+            </graphic>
+        </Button>
+        <Button layoutX="390.0" layoutY="11.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="50.0">
+            <graphic>
+                <ImageView fitHeight="46.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@../assets/9104290_video_video%20call_camera_record_icon.png" />
+                    </image>
+                </ImageView>
+            </graphic>
+        </Button>
+        <ScrollPane layoutY="72.0" opacity="0.0" prefHeight="672.0" prefWidth="466.0">
+            <content>
+                <VBox prefHeight="676.0" prefWidth="466.0" />
+            </content>
+        </ScrollPane>
+    </children>
 
 </AnchorPane>
