--- a/Server/src/main/resources/view/server.fxml
+++ b/Server/src/main/resources/view/server.fxml
@@ -1,14 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="830.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ServerController">
+<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ServerController">
    <children>
-      <TextArea fx:id="txtArea" layoutX="22.0" layoutY="14.0" prefHeight="740.0" prefWidth="550.0" />
-      <TextField fx:id="txtMessage" layoutX="22.0" layoutY="770.0" onAction="#sendTextOnAction" prefHeight="25.0" prefWidth="439.0" />
-      <JFXButton buttonType="RAISED" layoutX="491.0" layoutY="770.0" onAction="#sendOnAction" prefHeight="25.0" prefWidth="81.0" text="Send" />
+      <TextField fx:id="txtPassWord" layoutX="23.0" layoutY="124.0" prefHeight="25.0" prefWidth="231.0" />
+      <TextArea fx:id="txtArea" editable="false" layoutX="290.0" layoutY="56.0" prefHeight="259.0" prefWidth="285.0">
+         <font>
+            <Font name="Lucida Console" size="12.0" />
+         </font></TextArea>
+      <TextField fx:id="txtMessage" layoutX="291.0" layoutY="328.0" onAction="#sendTextOnAction" prefHeight="25.0" prefWidth="198.0" />
+      <JFXButton buttonType="RAISED" layoutX="497.0" layoutY="328.0" onAction="#sendOnAction" prefHeight="25.0" prefWidth="81.0" style="-fx-background-color: aqua;" text="Send">
+         <font>
+            <Font name="Lucida Console" size="13.0" />
+         </font></JFXButton>
+      <Label layoutX="345.0" layoutY="14.0" prefHeight="30.0" prefWidth="175.0" text="Chat Server" textAlignment="CENTER">
+         <font>
+            <Font name="Consolas" size="25.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtClientName" layoutX="23.0" layoutY="81.0" prefHeight="25.0" prefWidth="231.0" />
+      <JFXButton buttonType="RAISED" layoutX="162.0" layoutY="173.0" onAction="#addClientOnAction" ripplerFill="#4ff514" style="-fx-border-color: lime;" text="Add Client">
+         <font>
+            <Font name="Lucida Console" size="12.0" />
+         </font>
+      </JFXButton>
+      <JFXButton buttonType="RAISED" layoutX="23.0" layoutY="173.0" onAction="#remClientOnAction" ripplerFill="#f61111" style="-fx-border-color: red;" text="Remove">
+         <font>
+            <Font name="Lucida Console" size="12.0" />
+         </font>
+      </JFXButton>
+      <Label layoutX="66.0" layoutY="50.0" prefHeight="30.0" prefWidth="175.0" text="Add or remove client" textAlignment="CENTER">
+         <font>
+            <Font name="Consolas" size="13.0" />
+         </font>
+      </Label>
+      <JFXButton contentDisplay="GRAPHIC_ONLY" layoutX="111.0" layoutY="255.0" onAction="#shutDownOnAction" prefHeight="57.0" prefWidth="54.0">
+         <graphic>
+            <ImageView fitHeight="51.0" fitWidth="54.0" pickOnBounds="true">
+               <image>
+                  <Image url="@img/power-on.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </JFXButton>
+      <Label layoutX="87.0" layoutY="209.0" prefHeight="30.0" prefWidth="113.0" text="Server Shutdown" textAlignment="CENTER">
+         <font>
+            <Font name="Consolas" size="13.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
