--- a/Server/src/main/resources/view/server.fxml
+++ b/Server/src/main/resources/view/server.fxml
@@ -7,42 +7,43 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ServerController">
+<AnchorPane fx:id="root" prefHeight="614.0" prefWidth="867.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ServerController">
    <children>
-      <TextField fx:id="txtPassWord" layoutX="23.0" layoutY="124.0" prefHeight="25.0" prefWidth="231.0" />
-      <TextArea fx:id="txtArea" editable="false" layoutX="290.0" layoutY="56.0" prefHeight="259.0" prefWidth="285.0">
+      <TextField fx:id="txtPassWord" layoutX="56.0" layoutY="273.0" prefHeight="25.0" prefWidth="231.0" />
+      <TextArea fx:id="txtArea" editable="false" layoutX="355.0" layoutY="68.0" prefHeight="473.0" prefWidth="473.0">
          <font>
             <Font name="Lucida Console" size="12.0" />
          </font></TextArea>
-      <TextField fx:id="txtMessage" layoutX="291.0" layoutY="328.0" onAction="#sendTextOnAction" prefHeight="25.0" prefWidth="198.0" />
-      <JFXButton buttonType="RAISED" layoutX="497.0" layoutY="328.0" onAction="#sendOnAction" prefHeight="25.0" prefWidth="81.0" style="-fx-background-color: aqua;" text="Send">
+      <TextField fx:id="txtMessage" layoutX="358.0" layoutY="550.0" onAction="#sendTextOnAction" prefHeight="25.0" prefWidth="378.0" />
+      <JFXButton buttonType="RAISED" layoutX="749.0" layoutY="550.0" onAction="#sendOnAction" prefHeight="25.0" prefWidth="81.0" style="-fx-background-color: aqua;" text="Send">
          <font>
             <Font name="Lucida Console" size="13.0" />
          </font></JFXButton>
-      <Label layoutX="345.0" layoutY="14.0" prefHeight="30.0" prefWidth="175.0" text="Chat Server" textAlignment="CENTER">
+      <Label layoutX="356.0" layoutY="26.0" prefHeight="30.0" prefWidth="154.0" text="Chat Server" textAlignment="CENTER">
          <font>
             <Font name="Consolas" size="25.0" />
          </font>
       </Label>
-      <TextField fx:id="txtClientName" layoutX="23.0" layoutY="81.0" prefHeight="25.0" prefWidth="231.0" />
-      <JFXButton buttonType="RAISED" layoutX="162.0" layoutY="173.0" onAction="#addClientOnAction" ripplerFill="#4ff514" style="-fx-border-color: lime;" text="Add Client">
+      <TextField fx:id="txtClientName" layoutX="56.0" layoutY="202.0" prefHeight="25.0" prefWidth="231.0" />
+      <JFXButton buttonType="RAISED" layoutX="183.0" layoutY="342.0" onAction="#addClientOnAction" ripplerFill="#4ff514" style="-fx-border-color: lime;" text="Add Client">
          <font>
             <Font name="Lucida Console" size="12.0" />
          </font>
       </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="23.0" layoutY="173.0" onAction="#remClientOnAction" ripplerFill="#f61111" style="-fx-border-color: red;" text="Remove">
+      <JFXButton buttonType="RAISED" layoutX="79.0" layoutY="342.0" onAction="#remClientOnAction" ripplerFill="#f61111" style="-fx-border-color: red;" text="Remove">
          <font>
             <Font name="Lucida Console" size="12.0" />
          </font>
       </JFXButton>
-      <Label layoutX="66.0" layoutY="50.0" prefHeight="30.0" prefWidth="175.0" text="Add or remove client" textAlignment="CENTER">
+      <Label layoutX="96.0" layoutY="140.0" prefHeight="30.0" prefWidth="154.0" text="Add or remove client" textAlignment="CENTER">
          <font>
-            <Font name="Consolas" size="13.0" />
+            <Font name="Consolas Bold" size="14.0" />
          </font>
       </Label>
-      <JFXButton contentDisplay="GRAPHIC_ONLY" layoutX="111.0" layoutY="255.0" onAction="#shutDownOnAction" prefHeight="57.0" prefWidth="54.0">
+      <JFXButton contentDisplay="GRAPHIC_ONLY" layoutX="129.0" layoutY="471.0" onAction="#shutDownOnAction" prefHeight="57.0" prefWidth="54.0">
          <graphic>
             <ImageView fitHeight="51.0" fitWidth="54.0" pickOnBounds="true">
                <image>
@@ -51,9 +52,20 @@
             </ImageView>
          </graphic>
       </JFXButton>
-      <Label layoutX="87.0" layoutY="209.0" prefHeight="30.0" prefWidth="113.0" text="Server Shutdown" textAlignment="CENTER">
+      <Label layoutX="116.0" layoutY="435.0" prefHeight="30.0" prefWidth="113.0" text="Server Shutdown" textAlignment="CENTER">
          <font>
-            <Font name="Consolas" size="13.0" />
+            <Font name="Consolas Bold" size="13.0" />
+         </font>
+      </Label>
+      <Line endX="109.0" layoutX="171.0" layoutY="394.0" startX="-109.0" />
+      <Label layoutX="56.0" layoutY="176.0" prefHeight="24.0" prefWidth="81.0" text="username" textAlignment="CENTER">
+         <font>
+            <Font name="Consolas Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="56.0" layoutY="243.0" prefHeight="24.0" prefWidth="81.0" text="password" textAlignment="CENTER">
+         <font>
+            <Font name="Consolas Bold" size="14.0" />
          </font>
       </Label>
    </children>
