--- a/Client/src/main/resources/view/dashBoard.fxml
+++ b/Client/src/main/resources/view/dashBoard.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -10,57 +11,71 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DashBoardController">
+<AnchorPane fx:id="root" prefHeight="788.0" prefWidth="445.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DashBoardController">
    <children>
-      <TextField fx:id="txtMessage" layoutX="97.0" layoutY="351.0" onAction="#sendOnAction" prefHeight="25.0" prefWidth="353.0" style="-fx-border-color: black; -fx-border-radius: 20; -fx-background-radius: 20;">
+      <ImageView fitHeight="788.0" fitWidth="468.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/wallpaper.jpg" />
+         </image>
+      </ImageView>
+      <TextField fx:id="txtMessage" layoutX="63.0" layoutY="737.0" onAction="#sendOnAction" prefHeight="43.0" prefWidth="318.0" style="-fx-border-color: black; -fx-border-radius: 20; -fx-background-radius: 20;">
          <font>
             <Font name="Bauhaus 93" size="12.0" />
          </font></TextField>
-      <JFXButton buttonType="RAISED" contentDisplay="GRAPHIC_ONLY" layoutX="450.0" layoutY="343.0" onAction="#btnSendOnAction" prefHeight="41.0" prefWidth="41.0" text="send">
+      <JFXButton buttonType="RAISED" contentDisplay="GRAPHIC_ONLY" layoutX="381.0" layoutY="730.0" onAction="#btnSendOnAction" prefHeight="58.0" prefWidth="51.0" text="send">
          <graphic>
-            <ImageView fitHeight="31.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" rotate="45.0">
+            <ImageView fitHeight="51.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true" rotate="45.0">
                <image>
                   <Image url="@../img/send.png" />
                </image>
             </ImageView>
          </graphic></JFXButton>
-      <JFXButton buttonType="RAISED" contentDisplay="GRAPHIC_ONLY" layoutX="15.0" layoutY="341.0" onAction="#logoutOnAction" prefHeight="25.0" prefWidth="49.0" text="Logout">
+      <JFXButton contentDisplay="GRAPHIC_ONLY" layoutX="17.0" layoutY="737.0" onAction="#openEmojiBoard" prefHeight="43.0" prefWidth="42.0">
          <graphic>
-            <ImageView fitHeight="39.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../img/power-on.png" />
-               </image>
-            </ImageView>
-         </graphic></JFXButton>
-      <JFXButton contentDisplay="GRAPHIC_ONLY" layoutX="55.0" layoutY="347.0" onAction="#openEmojiBoard">
-         <graphic>
-            <ImageView fitHeight="25.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="32.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../img/smile.png" />
                </image>
             </ImageView>
          </graphic>
       </JFXButton>
-      <JFXButton contentDisplay="GRAPHIC_ONLY" layoutX="416.0" layoutY="351.0" onAction="#addImageOnAction">
+      <ScrollPane fx:id="scrollPane" layoutX="10.0" layoutY="72.0" prefHeight="661.0" prefViewportHeight="285.0" prefViewportWidth="515.0" prefWidth="425.0" style="visibility: no;">
+         <HBox fx:id="hbox" prefHeight="659.0" prefWidth="421.0">
+            <children>
+               <!-- Use VBox as the container for text bubbles -->
+               <VBox fx:id="chatContainer" prefHeight="659.0" prefWidth="426.0" />
+            </children>
+         </HBox>
+      </ScrollPane>
+      <JFXButton contentDisplay="GRAPHIC_ONLY" layoutX="331.0" layoutY="743.0" onAction="#addImageOnAction">
          <graphic>
-            <ImageView fitHeight="31.0" fitWidth="17.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="25.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../img/album.png" />
                </image>
             </ImageView>
+         </graphic></JFXButton>
+      <Label layoutX="3.0" layoutY="6.0" prefHeight="75.0" prefWidth="436.0" style="-fx-background-color: white;">
+         <graphic>
+            <JFXButton buttonType="RAISED" contentDisplay="GRAPHIC_ONLY" onAction="#logoutOnAction" prefHeight="25.0" prefWidth="49.0" text="Logout">
+               <graphic>
+                  <ImageView fitHeight="39.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/power-on.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </JFXButton>
          </graphic>
-      </JFXButton>
-      <ScrollPane fx:id="scrollPane" layoutX="13.0" layoutY="12.0" prefHeight="317.0" prefViewportHeight="285.0" prefViewportWidth="515.0" prefWidth="575.0">
-         <HBox fx:id="hbox" prefHeight="307.0" prefWidth="568.0">
-            <children>
-               <!-- Use VBox as the container for text bubbles -->
-               <VBox fx:id="chatContainer" prefHeight="321.0" prefWidth="570.0" />
-            </children>
-         </HBox>
-      </ScrollPane>
-      <ImageView fitHeight="41.0" fitWidth="91.0" layoutX="517.0" layoutY="342.0" pickOnBounds="true" preserveRatio="true">
+      </Label>
+      <Label layoutX="158.0" layoutY="21.0" prefHeight="43.0" prefWidth="129.0" text="Cat Chat">
+         <font>
+            <Font name="System Bold" size="30.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="58.0" fitWidth="66.0" layoutX="86.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../img/new-removebg-preview.png" />
+            <Image url="@../img/dp.jpg" />
          </image>
       </ImageView>
 
